<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitleView"
            android:text="@string/Title"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:text="@string/Header_1"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:labelFor="@+id/editTextTextPersonName1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/editTextTextPersonName1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="name"
                android:inputType="textPersonName"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:text="@string/Header_2"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:labelFor="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="Height"
                android:inputType="numberDecimal"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView3"
                android:text="@string/Header_3"
                android:labelFor="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="Weight"
                android:inputType="numberDecimal"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:text="@string/Header_4"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ChkContent_1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ChkContent_2" />
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:text="@string/BtnContent_1"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/Header_5"
                android:textSize="30sp" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RadContent_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RadContent_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RadContent_3" />
        </RadioGroup>

        <Button
            android:id="@+id/button2"
            android:text="@string/BtnContent_2"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>